--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,8 +9,9 @@
         android:title="@string/today"
         app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/settings"
-        android:onClick="settingsClick"
+        android:id="@+id/action_logout"
+        android:icon="@drawable/img_logout"
+        android:onClick="logoutClick"
         android:title="@string/settings"
-        app:showAsAction="never" />
+        app:showAsAction="ifRoom" />
 </menu>
