--- a/app/src/main/res/layout/dialog_events_list.xml
+++ b/app/src/main/res/layout/dialog_events_list.xml
@@ -30,7 +30,7 @@
             android:background="@android:color/transparent"
             android:contentDescription="@string/app_name"
             android:onClick="onNewEventClick"
-            android:src="@drawable/ic_add_event" />
+            android:src="@drawable/img_add_event" />
 
 
     </FrameLayout>
