--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,8 +22,11 @@
     <color name="red">#FF0000</color>
     <color name="pink">#ff4081</color>
     <color name="burgundy">#b33</color>
+
     <color name="yellow">#FFE699</color>
+    <color name="yellow_pressed">#ffd24d</color>
     <color name="dark_yellow">#FABB37</color>
+    <color name="dark_yellow_pressed">#eaa206</color>
 
 
     <color name="interv_method_unchecked">#F8CBAC</color>
